[tool.poetry]
name = "argmining-clustering"
version = "0.1.0"
description = ""
authors = ["Mirko Lenz <info@mirko-lenz.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
arguebuf = "^1.0.0"
scikit-learn = "^1.1.1"
typer = "^0.4.1"
numpy = "^1.22.4"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
nltk = "^3.7"
spacy = "^3.3.1"
textacy = "^0.12.0"
graphkit-learn = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
